# nuc_fan

./: .gitattributes  README.md  package-lock.json  package.json
src/: b.css  index.html  splashscreen.html  tdp.html
src-tauri/: Cargo.toml  NUC_X15_Fan更新日志.md  tauri.conf.json  分析.md
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/modules/: config.rs  mod.rs  setup.rs  struct_set.rs  wmi.rs
src/assets/: chartjs-plugin-dragdata.js
